Revert "4.3-MU-4.3.1 - Github action for enforcing checkstyle (#1704)"
This reverts commit ae787d0d914a1f9997e2e8d039cb511b2fc02557.

--- a/modules-disabled/architecture/nav-architecture-components-guide.adoc
+++ b/modules-disabled/architecture/nav-architecture-components-guide.adoc
@@ -1,9 +1,12 @@
 // Architecture Antora Navigation List
+
+// PDF Architecture
 ifdef::backend-pdf[]
 = Architecture Guide: {productname} {productnumber}
 include::./branding/pdf/entities.adoc[]
 :toclevels: 2
 
+// License
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
 
 endif::[]
@@ -11,6 +14,7 @@ endif::[]
 
 * xref:architecture-intro.adoc[Architecture Guide]
 ** xref:architecture-legend.adoc[Legend]
+// The Salt Stack
 ** xref:salt-overview.adoc[Salt]
 *** xref:salt-core-components.adoc[Core Salt Components]
 *** xref:salt-data-locations.adoc[Salt Data Locations]
@@ -20,18 +24,21 @@ endif::[]
 *** xref:salt-ssh-push-tunnel.adoc[Salt SSH Push & Tunnel]
 *** xref:salt-bootstrapping-ui.adoc[Salt Bootstrapping WebUI]
 *** xref:salt-onboarding-and-registration.adoc[Onboarding and Registration]
+// The Traditional Stack
 ** xref:traditional-overview.adoc[Traditional]
 *** xref:traditional-contact-method-overview.adoc[Contact Methods]
 *** xref:traditional-rhnsd.adoc[rhnsd]
 *** xref:traditional-osad.adoc[osad]
 *** xref:traditional-ssh-push.adoc[SSH Push]
 *** xref:traditional-ssh-pull.adoc[SSH Pull]
+// Repositories
 ** xref:repositories-overview.adoc[Repositories]
 *** xref:pool-repositories.adoc[Pool Repositories]
 *** xref:devel-repositories.adoc[Devel Repositories]
 *** xref:tools-repositories.adoc[Tools Repositories]
 *** xref:maintenance-repositories.adoc[Maintenance Repositories]
 *** xref:syncing-repositories.adoc[Syncing Repositories]
+// Component Index
 ** xref:components-overview.adoc[Component Index]
 *** xref:apache.adoc[Apache httpd]
 *** xref:tomcat.adoc[Tomcat]
