--- a/modules/reference/nav-reference-guide.adoc
+++ b/modules/reference/nav-reference-guide.adoc
@@ -1,4 +1,5 @@
 // Reference Guide Antora Navigation List
+
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Reference Guide
 include::./branding/pdf/entities.adoc[]
@@ -9,21 +10,26 @@ endif::[]
 
 * xref:reference-overview.adoc[Reference Guide]
 ** WebUI Reference
+// Home Menu
 *** xref:home/home-menu.adoc[Home]
 **** xref:home/home-overview.adoc[Overview]
 **** xref:home/home-notification-messages.adoc[Notification Messages]
+// User Account
 **** xref:home/user-account-menu.adoc[User Account Menu]
 ***** xref:home/user-account-my-account.adoc[My Account]
 ***** xref:home/user-account-addresses.adoc[Addresses]
 ***** xref:home/user-account-change-email.adoc[Change Email]
 ***** xref:home/user-account-account-deactivation.adoc[Account Deactivation]
 **** xref:home/home-my-preferences.adoc[My Preferences]
+// My Organization
 **** xref:home/my-organization-menu.adoc[My Organization]
 ***** xref:home/my-organization-configuration.adoc[Configuration]
 ***** xref:home/my-organization-trusts.adoc[Organization Trusts]
 ***** xref:home/my-organization-configuration-channels.adoc[Configuration Channels]
+// Systems Menu
 *** xref:systems/systems-menu.adoc[Systems]
 **** xref:systems/systems-overview.adoc[Systems Overview]
+// Systems Details (SD)
 **** xref:systems/system-details/sd-details.adoc[System Details]
 ***** xref:systems/system-details/sd-overview.adoc[System Details Overview]
 ***** xref:systems/system-details/sd-properties.adoc[Properties]
@@ -48,17 +54,25 @@ endif::[]
 ***** xref:systems/system-details/sd-formulas.adoc[Formulas]
 ***** xref:systems/system-details/sd-ansible.adoc[Ansible]
 ***** xref:systems/system-details/sd-events.adoc[Events]
+// Systems List
 **** xref:systems/systems-list.adoc[Systems List]
 **** xref:systems/system-groups.adoc[System Groups]
+// System Set manager
 **** xref:systems/ssm-menu.adoc[System Set Manager]
 ***** xref:systems/ssm-overview.adoc[Overview]
 ***** xref:systems/ssm-task-log.adoc[Task Log]
 **** xref:systems/bootstrapping.adoc[Bootstrapping]
+// Systems Visualization
 **** xref:systems/visualization-menu.adoc[Visualization]
+// Advanced Search
 **** xref:systems/advanced-search.adoc[Advanced Search]
+// Activation Keys
 **** xref:systems/activation-keys.adoc[Activation Keys]
+// Stored Profiles
 **** xref:systems/stored-profiles.adoc[Stored Profiles]
+// Custom System Info
 **** xref:systems/custom-system-info.adoc[Custom System Info]
+// Autoinstallation
 **** xref:systems/autoinst-menu.adoc[Autoinstallation]
 ***** xref:systems/autoinst-overview.adoc[Overview]
 ***** xref:systems/autoinst-profiles.adoc[Profiles]
@@ -67,16 +81,20 @@ endif::[]
 ***** xref:systems/autoinst-distributions.adoc[Distributions]
 ***** xref:systems/autoinst-file-preservation.adoc[File Preservation]
 ***** xref:systems/autoinst-snippets.adoc[Autoinstallation Snipppets]
+// Virtual Host Managers
 **** xref:systems/virtual-host-managers.adoc[Virtual Host Managers]
+// Salt Menu
 *** xref:salt/salt-menu.adoc[Salt]
 **** xref:salt/salt-keys.adoc[Keys]
 **** xref:salt/salt-remote-commands.adoc[Remote Commands]
 **** xref:salt/salt-formula-catalog.adoc[Formula Catalog]
+// Images Menu
 *** xref:images/images-menu.adoc[Images]
 **** xref:images/images-image-list.adoc[Image List]
 **** xref:images/images-build.adoc[Build]
 **** xref:images/images-profiles.adoc[Profiles]
 **** xref:images/images-stores.adoc[Stores]
+// Patches
 *** xref:patches/patches-menu.adoc[Patches]
 **** xref:patches/patch-details.adoc[Patch Details]
 **** Patch List
@@ -85,6 +103,7 @@ endif::[]
 **** xref:patches/patches-advanced-search.adoc[Advanced Search]
 **** xref:patches/manage-patches.adoc[Manage Patches]
 **** xref:patches/clone-patches.adoc[Clone Patches]
+// Software
 *** xref:software/software-menu.adoc[Software]
 **** xref:software/channel-details.adoc[Channel Details]
 **** xref:software/software-channel-list-menu.adoc[Channel List]
@@ -94,9 +113,11 @@ endif::[]
 ***** xref:software/manage-packages.adoc[Packages]
 ***** xref:software/manage-repositories.adoc[Repositories]
 **** xref:software/software-distribution-channel-mapping.adoc[Distribution Channel Mapping]
+// Content Lifecycle Management
 *** xref:clm/clm-menu.adoc[Content Lifecycle Management]
 **** xref:clm/clm-projects.adoc[Projects]
 **** xref:clm/clm-filters.adoc[Filters]
+// Audit
 *** xref:audit/audit-menu.adoc[Audit]
 **** xref:audit/audit-cve-audit.adoc[CVE Audit]
 **** xref:audit/audit-subscription-matching.adoc[Subscription Matching]
@@ -105,6 +126,7 @@ endif::[]
 ***** xref:audit/openscap-all-scans.adoc[All Scans]
 ***** xref:audit/openscap-xccdf-diff.adoc[XCCDF Diff]
 ***** xref:audit/openscap-advanced-search.adoc[Advanced Search]
+// Configuration
 *** xref:configuration/config-menu.adoc[Configuration]
 **** xref:configuration/config-overview.adoc[Overview]
 **** xref:configuration/config-channels.adoc[Channels]
@@ -114,6 +136,7 @@ endif::[]
 **** xref:configuration/config-systems-menu.adoc[Systems]
 ***** xref:configuration/config-systems-managed.adoc[Managed]
 ***** xref:configuration/config-systems-target.adoc[Target]
+// Schedule
 *** xref:schedule/schedule-menu.adoc[Schedule]
 **** xref:schedule/pending-actions.adoc[Pending Actions]
 **** xref:schedule/recurring-actions.adoc[Recurring Actions]
@@ -121,6 +144,7 @@ endif::[]
 **** xref:schedule/archived-actions.adoc[Archived Actions]
 **** xref:schedule/action-chains.adoc[Action Chains]
 **** xref:schedule/maintenance-windows.adoc[Maintenance Windows]
+// Users
 *** xref:users/users-menu.adoc[Users]
 **** xref:users/user-details.adoc[User Details]
 **** xref:users/users-list.adoc[Users List]
@@ -128,6 +152,7 @@ endif::[]
 ***** xref:users/deactivated-users.adoc[Deactivated Users]
 ***** xref:users/all-users.adoc[All Users]
 **** xref:users/system-group-configuration.adoc[System Group Configuration]
+// Admin
 *** xref:admin/admin-menu.adoc[Admin]
 **** xref:admin/setup-wizard.adoc[Setup Wizard]
 **** xref:admin/organizations.adoc[Organizations]
@@ -145,6 +170,7 @@ endif::[]
 **** xref:admin/task-schedules.adoc[Task Schedules]
 **** xref:admin/task-engine-status.adoc[Task Engine Status]
 **** xref:admin/show-tomcat-logs.adoc[Show Tomcat Logs]
+// Help
 *** xref:help/help-menu.adoc[Help]
 **** xref:help/documentation-version.adoc[Documentation Version]
 **** xref:help/release-notes.adoc[Release Notes]
@@ -152,6 +178,7 @@ endif::[]
 ***** xref:help/api-overview.adoc[Overview]
 ***** xref:help/api-faq.adoc[FAQ]
 ***** xref:help/api-sample-scripts.adoc[Sample Scripts]
+// spacecmd Command Reference
 ** xref:spacecmd-intro.adoc[spacecmd Reference]
 *** xref:spacecmd/configuring-spacecmd.adoc[Configuring spacecmd]
 *** xref:spacecmd/spacecmd-help.adoc[Help]
@@ -190,11 +217,14 @@ endif::[]
 **** xref:spacecmd/whoami.adoc[whoami]
 **** xref:spacecmd/whoamitalkingto.adoc[whoamitalkingto]
 **** xref:spacecmd/misc-help-topics.adoc[Miscellaneous Help Topics]
+// CLI Tools
 ** xref:command-line-tools.adoc[Command Line Tools]
 *** xref:cli-mgrcfg.adoc[Configuration CLI Tools]
 *** xref:cli-sync.adoc[Synchronization CLI Tools]
 *** xref:cli-bootstrap.adoc[Bootstrapping CLI Tools]
 *** xref:cli-smdba.adoc[Database CLI Tools]
+// Configuration Files. Disabling for now. --LKB 2020-10-09
+//** xref:configuration-files.adoc[Configuration Files]
 
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
