--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -1,4 +1,6 @@
 // Specialized Guides Antora Navigation List
+
+// PDF Specialized Guides
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Specialized Guides
 include::./branding/pdf/entities.adoc[]
@@ -8,6 +10,8 @@ endif::[]
 
 
 * xref:specialized-guides-overview.adoc[Specialized Guides]
+// Guide 1
+// Salt Guide
 ** xref:salt/salt-overview.adoc[Salt Guide]
 *** xref:salt/salt-terminology.adoc[Terminology]
 *** xref:salt/salt-command.adoc[Salt Command]
@@ -19,6 +23,7 @@ endif::[]
 *** xref:salt/salt-gitfs.adoc[GitFS Fileserver Backend]
 *** xref:salt/salt-yomi.adoc[Install Using Yomi]
 *** xref:salt/salt-config-modules.adoc[Configuration Modules]
+// Formulas
 *** xref:salt/salt-formulas-intro.adoc[Salt Formulas]
 **** xref:salt/salt-formulas-by-product.adoc[Formulas provided by {productname}]
 **** xref:salt/salt-formula-bind.adoc[Bind Formula]
@@ -32,9 +37,14 @@ endif::[]
 **** xref:salt/salt-formula-vsftpd.adoc[VsFTPd Formula]
 **** xref:salt/salt-formula-yomi.adoc[Yomi Formula]
 **** xref:salt/salt-formulas-custom.adoc[Custom Salt Formulas]
+//*** xref:salt/salt-example-formula.adoc[Example Custom Formula]
 *** xref:salt/salt-ssh.adoc[Salt SSH]
 *** xref:salt/salt-rate-limiting.adoc[Rate Limiting]
 *** xref:salt/salt-scaling-minions.adoc[Scaling Minions]
+// Leaving this breadcrumb here for now, but these pages will need to be removed from the Salt Guide entirely at some point. --LKB 2020-07-17
+// **** xref:salt/salt-large-scale-tuning.adoc[Tuning Large Scale Installations]
+// Guide 2
+// Large Deployments
 ** xref:large-deployments/overview.adoc[Large Deployments Guide]
 *** xref:large-deployments/hardware-reqs.adoc[Hardware Requirements]
 *** xref:large-deployments/single-server.adoc[Single Server]
@@ -48,15 +58,21 @@ endif::[]
 **** xref:large-deployments/hub-reporting.adoc[Hub Reporting]
 *** xref:large-deployments/retail-large-scale.adoc[Large Retail Environments]
 *** xref:large-deployments/tuning.adoc[Tuning Large Installations]
+// ** xref:large-deployments/monitoring.adoc[Monitoring Large Installation]
+// Guide 3
+// Public Cloud
 ** xref:qs-publiccloud/overview.adoc[Quick Start: Public Cloud]
 *** xref:qs-publiccloud/setup.adoc[Setting Up]
 *** xref:qs-publiccloud/clients.adoc[Clients]
+// Guide 4
+// SAP
 ** xref:qs-sap/overview.adoc[Quick Start: SAP]
 *** xref:qs-sap/prepare-server.adoc[Prepare Server]
 *** xref:qs-sap/prepare-clients.adoc[Prepare Clients]
 *** xref:qs-sap/configure.adoc[Configuration]
 
 
+// License
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
 endif::[]
