--- a/l10n-weblate/ROOT/pt_BR.po
+++ b/l10n-weblate/ROOT/pt_BR.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-08-09 11:01+0000\n"
+"POT-Creation-Date: 2022-03-10 14:17+0000\n"
 "PO-Revision-Date: 2022-01-31 23:12+0000\n"
 "Last-Translator: Rodrigo Macedo <rmsolucoeseminformatic4@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) <https://l10n.opensuse.org/projects/uyuni/"
@@ -19,6 +19,7 @@ msgstr ""
 "X-Generator: Weblate 4.9.1\n"
 
 #. * xref:index-webui-branding-2019.adoc[What is SUSE Manager?]
+#. * xref:release-notes-version-4.0.adoc[Doc Release Notes]
 #. type: Plain text
 #: modules/ROOT/nav.adoc:1
 msgid "xref:common_gfdl1.2_i.adoc[License]"
