--- a/l10n-weblate/client-configuration/client-configuration.pot
+++ b/l10n-weblate/client-configuration/client-configuration.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-08-09 11:01+0000\n"
+"POT-Creation-Date: 2022-07-27 15:09+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -6188,6 +6188,8 @@ msgid ""
 "require regular upgrades."
 msgstr ""
 
+#.  SCC registered clients using {suse}:
+#.  ifeval::[{suma-content} == true]
 #. type: Plain text
 #: modules/client-configuration/pages/client-upgrades.adoc:3
 msgid ""
@@ -6214,6 +6216,7 @@ msgid ""
 "xref:client-configuration:client-upgrades-lifecycle.adoc[]."
 msgstr ""
 
+#.  endif::[]
 #. type: Plain text
 #: modules/client-configuration/pages/client-upgrades.adoc:6
 msgid ""
@@ -18107,24 +18110,18 @@ msgstr ""
 #: modules/client-configuration/pages/supported-features.adoc:14
 msgid ""
 "The ``spacewalk-utils`` and ``spacewalk-utils-extras`` packages can provide "
-"additional services and features."
-msgstr ""
-
-#. type: Plain text
-#: modules/client-configuration/pages/supported-features.adoc:15
-msgid ""
-"The ``spacewalk-utils`` package in {productname} is fully supported by "
-"{suse}, and contains these tools:"
+"additional services and features.  The ``spacewalk-utils`` package in "
+"{productname} is fully supported by {suse}, and contains these tools:"
 msgstr ""
 
 #. type: Block title
-#: modules/client-configuration/pages/supported-features.adoc:16
+#: modules/client-configuration/pages/supported-features.adoc:15
 #, no-wrap
 msgid "Spacewalk Utilities"
 msgstr ""
 
 #. type: Table
-#: modules/client-configuration/pages/supported-features.adoc:17
+#: modules/client-configuration/pages/supported-features.adoc:16
 #, no-wrap
 msgid ""
 "| Tool Name\n"
@@ -18154,7 +18151,7 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: modules/client-configuration/pages/supported-features.adoc:18
+#: modules/client-configuration/pages/supported-features.adoc:17
 msgid ""
 "The ``spacewalk-utils-extras`` package in {productname} has limited support "
 "by {suse}."
