--- a/l10n-weblate/reference/reference.pot
+++ b/l10n-weblate/reference/reference.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-08-09 11:01+0000\n"
+"POT-Creation-Date: 2022-07-27 15:09+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -27,6 +27,7 @@ msgstr ""
 msgid "xref:reference-overview.adoc[Reference Guide]"
 msgstr ""
 
+#.  Home Menu
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:3
 msgid "WebUI Reference"
@@ -42,6 +43,7 @@ msgstr ""
 msgid "xref:home/home-overview.adoc[Overview]"
 msgstr ""
 
+#.  User Account
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:6
 msgid "xref:home/home-notification-messages.adoc[Notification Messages]"
@@ -72,6 +74,7 @@ msgstr ""
 msgid "xref:home/user-account-account-deactivation.adoc[Account Deactivation]"
 msgstr ""
 
+#.  My Organization
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:12
 msgid "xref:home/home-my-preferences.adoc[My Preferences]"
@@ -92,6 +95,7 @@ msgstr ""
 msgid "xref:home/my-organization-trusts.adoc[Organization Trusts]"
 msgstr ""
 
+#.  Systems Menu
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:16
 msgid ""
@@ -104,6 +108,7 @@ msgstr ""
 msgid "xref:systems/systems-menu.adoc[Systems]"
 msgstr ""
 
+#.  Systems Details (SD)
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:18
 msgid "xref:systems/systems-overview.adoc[Systems Overview]"
@@ -224,6 +229,7 @@ msgstr ""
 msgid "xref:systems/system-details/sd-ansible.adoc[Ansible]"
 msgstr ""
 
+#.  Systems List
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:42
 msgid "xref:systems/system-details/sd-events.adoc[Events]"
@@ -234,6 +240,7 @@ msgstr ""
 msgid "xref:systems/systems-list.adoc[Systems List]"
 msgstr ""
 
+#.  System Set manager
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:44
 msgid "xref:systems/system-groups.adoc[System Groups]"
@@ -254,31 +261,37 @@ msgstr ""
 msgid "xref:systems/ssm-task-log.adoc[Task Log]"
 msgstr ""
 
+#.  Systems Visualization
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:48
 msgid "xref:systems/bootstrapping.adoc[Bootstrapping]"
 msgstr ""
 
+#.  Advanced Search
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:49
 msgid "xref:systems/visualization-menu.adoc[Visualization]"
 msgstr ""
 
+#.  Activation Keys
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:50
 msgid "xref:systems/advanced-search.adoc[Advanced Search]"
 msgstr ""
 
+#.  Stored Profiles
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:51
 msgid "xref:systems/activation-keys.adoc[Activation Keys]"
 msgstr ""
 
+#.  Custom System Info
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:52
 msgid "xref:systems/stored-profiles.adoc[Stored Profiles]"
 msgstr ""
 
+#.  Autoinstallation
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:53
 msgid "xref:systems/custom-system-info.adoc[Custom System Info]"
@@ -319,11 +332,13 @@ msgstr ""
 msgid "xref:systems/autoinst-file-preservation.adoc[File Preservation]"
 msgstr ""
 
+#.  Virtual Host Managers
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:61
 msgid "xref:systems/autoinst-snippets.adoc[Autoinstallation Snipppets]"
 msgstr ""
 
+#.  Salt Menu
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:62
 msgid "xref:systems/virtual-host-managers.adoc[Virtual Host Managers]"
@@ -344,6 +359,7 @@ msgstr ""
 msgid "xref:salt/salt-remote-commands.adoc[Remote Commands]"
 msgstr ""
 
+#.  Images Menu
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:66
 msgid "xref:salt/salt-formula-catalog.adoc[Formula Catalog]"
@@ -369,6 +385,7 @@ msgstr ""
 msgid "xref:images/images-profiles.adoc[Profiles]"
 msgstr ""
 
+#.  Patches
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:71
 msgid "xref:images/images-stores.adoc[Stores]"
@@ -409,6 +426,7 @@ msgstr ""
 msgid "xref:patches/manage-patches.adoc[Manage Patches]"
 msgstr ""
 
+#.  Software
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:79
 msgid "xref:patches/clone-patches.adoc[Clone Patches]"
@@ -454,6 +472,7 @@ msgstr ""
 msgid "xref:software/manage-repositories.adoc[Repositories]"
 msgstr ""
 
+#.  Content Lifecycle Management
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:88
 msgid ""
@@ -471,6 +490,7 @@ msgstr ""
 msgid "xref:clm/clm-projects.adoc[Projects]"
 msgstr ""
 
+#.  Audit
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:91
 msgid "xref:clm/clm-filters.adoc[Filters]"
@@ -511,6 +531,7 @@ msgstr ""
 msgid "xref:audit/openscap-xccdf-diff.adoc[XCCDF Diff]"
 msgstr ""
 
+#.  Configuration
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:99
 msgid "xref:audit/openscap-advanced-search.adoc[Advanced Search]"
@@ -556,6 +577,7 @@ msgstr ""
 msgid "xref:configuration/config-systems-managed.adoc[Managed]"
 msgstr ""
 
+#.  Schedule
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:108
 msgid "xref:configuration/config-systems-target.adoc[Target]"
@@ -591,6 +613,7 @@ msgstr ""
 msgid "xref:schedule/action-chains.adoc[Action Chains]"
 msgstr ""
 
+#.  Users
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:115
 msgid "xref:schedule/maintenance-windows.adoc[Maintenance Windows]"
@@ -626,6 +649,7 @@ msgstr ""
 msgid "xref:users/all-users.adoc[All Users]"
 msgstr ""
 
+#.  Admin
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:122
 msgid "xref:users/system-group-configuration.adoc[System Group Configuration]"
@@ -711,6 +735,7 @@ msgstr ""
 msgid "xref:admin/task-engine-status.adoc[Task Engine Status]"
 msgstr ""
 
+#.  Help
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:139
 msgid "xref:admin/show-tomcat-logs.adoc[Show Tomcat Logs]"
@@ -746,6 +771,7 @@ msgstr ""
 msgid "xref:help/api-faq.adoc[FAQ]"
 msgstr ""
 
+#.  spacecmd Command Reference
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:146
 msgid "xref:help/api-sample-scripts.adoc[Sample Scripts]"
@@ -936,6 +962,7 @@ msgstr ""
 msgid "xref:spacecmd/whoamitalkingto.adoc[whoamitalkingto]"
 msgstr ""
 
+#.  CLI Tools
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:184
 msgid "xref:spacecmd/misc-help-topics.adoc[Miscellaneous Help Topics]"
@@ -961,6 +988,7 @@ msgstr ""
 msgid "xref:cli-bootstrap.adoc[Bootstrapping CLI Tools]"
 msgstr ""
 
+#.  Configuration Files. Disabling for now. --LKB 2020-10-09
 #. type: Plain text
 #: modules/reference/nav-reference-guide.adoc:189
 msgid "xref:cli-smdba.adoc[Database CLI Tools]"
