--- a/l10n-weblate/retail/es.po
+++ b/l10n-weblate/retail/es.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-08-09 11:01+0000\n"
+"POT-Creation-Date: 2022-07-27 15:09+0000\n"
 "PO-Revision-Date: 2020-10-01 00:02+0000\n"
 "Last-Translator: Pau Garcia Quiles <pau.garcia@suse.com>\n"
 "Language-Team: Spanish <https://l10n.opensuse.org/projects/uyuni/docs-retail-"
@@ -29,6 +29,7 @@ msgstr ""
 msgid "xref:retail-overview.adoc[Retail Guide]"
 msgstr ""
 
+#.  Installation
 #. type: Plain text
 #: modules/retail/nav-retail-guide.adoc:3
 msgid "xref:retail-components.adoc[Retail Components]"
@@ -39,6 +40,7 @@ msgstr ""
 msgid "xref:retail-install.adoc[Retail Installation]"
 msgstr ""
 
+#.  The following file contains server, branch server, and build host installation:
 #. type: Plain text
 #: modules/retail/nav-retail-guide.adoc:5
 msgid "xref:retail-requirements.adoc[Retail Requirements]"
@@ -70,6 +72,7 @@ msgstr ""
 msgid "xref:retail-network-arch.adoc[Network Architecture]"
 msgstr ""
 
+#.  Terminal ops
 #. type: Plain text
 #: modules/retail/nav-retail-guide.adoc:11
 msgid "xref:retail-install-setup.adoc[Set Up Retail Environment]"
@@ -111,11 +114,13 @@ msgstr ""
 msgid "xref:retail-offline.adoc[Offline Use]"
 msgstr ""
 
+#.  Formulas
 #. type: Plain text
 #: modules/retail/nav-retail-guide.adoc:19
 msgid "xref:retail-terminal-ratelimiting.adoc[Rate Limiting Terminals]"
 msgstr ""
 
+#.  Admin
 #. type: Plain text
 #: modules/retail/nav-retail-guide.adoc:20
 msgid "xref:retail-formulas-intro.adoc[Retail Formulas]"
@@ -141,6 +146,7 @@ msgstr ""
 msgid "xref:retail-delta-images.adoc[Delta Images]"
 msgstr ""
 
+#.  Retail Upgrade
 #. type: Plain text
 #: modules/retail/nav-retail-guide.adoc:25
 msgid "xref:retail-admin-network.adoc[Network Administration]"
@@ -161,6 +167,8 @@ msgstr ""
 msgid "xref:retail-migration-slepostosuma.adoc[Migrate SLEPOS to SUMA]"
 msgstr ""
 
+#.  FIXME: Adjust for Uyuni
+#.  End matter
 #. type: Plain text
 #: modules/retail/nav-retail-guide.adoc:29
 msgid "xref:retail-upgrade-branchserver.adoc[Upgrade Branch Server]"
@@ -4237,25 +4245,20 @@ msgstr ""
 #: modules/retail/pages/retail-overview.adoc:6
 msgid ""
 "This guide provides an overview of {productname} {smr}, and its initial "
-"installation and setup."
+"installation and setup.  It should be read in conjunction with the "
+"{productname} documentation suite, available from https://documentation.suse."
+"com/suma."
 msgstr ""
 
 #. type: Plain text
 #: modules/retail/pages/retail-overview.adoc:7
 msgid ""
 "It should be read in conjunction with the {productname} documentation suite, "
-"available from https://documentation.suse.com/suma."
-msgstr ""
-
-#. type: Plain text
-#: modules/retail/pages/retail-overview.adoc:8
-msgid ""
-"It should be read in conjunction with the {productname} documentation suite, "
 "available from https://www.uyuni-project.org/uyuni-docs."
 msgstr ""
 
 #. type: Plain text
-#: modules/retail/pages/retail-overview.adoc:9
+#: modules/retail/pages/retail-overview.adoc:8
 msgid ""
 "For more information about managing your {productname} {smr} environment, or "
 "to find out where to get help, see xref:retail:retail-next.adoc[]."
