--- a/l10n-weblate/retail/zh_CN.po
+++ b/l10n-weblate/retail/zh_CN.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-08-09 11:01+0000\n"
+"POT-Creation-Date: 2022-07-27 15:09+0000\n"
 "PO-Revision-Date: 2022-07-07 10:13+0000\n"
 "Last-Translator: Grace Yu <grace.yu@excel-gits.com>\n"
 "Language-Team: Chinese (China) <https://l10n.opensuse.org/projects/uyuni/"
@@ -30,6 +30,7 @@ msgstr ""
 msgid "xref:retail-overview.adoc[Retail Guide]"
 msgstr ""
 
+#.  Installation
 #. type: Plain text
 #: modules/retail/nav-retail-guide.adoc:3
 msgid "xref:retail-components.adoc[Retail Components]"
@@ -40,6 +41,7 @@ msgstr ""
 msgid "xref:retail-install.adoc[Retail Installation]"
 msgstr ""
 
+#.  The following file contains server, branch server, and build host installation:
 #. type: Plain text
 #: modules/retail/nav-retail-guide.adoc:5
 msgid "xref:retail-requirements.adoc[Retail Requirements]"
@@ -71,6 +73,7 @@ msgstr ""
 msgid "xref:retail-network-arch.adoc[Network Architecture]"
 msgstr ""
 
+#.  Terminal ops
 #. type: Plain text
 #: modules/retail/nav-retail-guide.adoc:11
 msgid "xref:retail-install-setup.adoc[Set Up Retail Environment]"
@@ -112,11 +115,13 @@ msgstr ""
 msgid "xref:retail-offline.adoc[Offline Use]"
 msgstr ""
 
+#.  Formulas
 #. type: Plain text
 #: modules/retail/nav-retail-guide.adoc:19
 msgid "xref:retail-terminal-ratelimiting.adoc[Rate Limiting Terminals]"
 msgstr ""
 
+#.  Admin
 #. type: Plain text
 #: modules/retail/nav-retail-guide.adoc:20
 msgid "xref:retail-formulas-intro.adoc[Retail Formulas]"
@@ -142,6 +147,7 @@ msgstr ""
 msgid "xref:retail-delta-images.adoc[Delta Images]"
 msgstr ""
 
+#.  Retail Upgrade
 #. type: Plain text
 #: modules/retail/nav-retail-guide.adoc:25
 msgid "xref:retail-admin-network.adoc[Network Administration]"
@@ -162,6 +168,8 @@ msgstr ""
 msgid "xref:retail-migration-slepostosuma.adoc[Migrate SLEPOS to SUMA]"
 msgstr ""
 
+#.  FIXME: Adjust for Uyuni
+#.  End matter
 #. type: Plain text
 #: modules/retail/nav-retail-guide.adoc:29
 msgid "xref:retail-upgrade-branchserver.adoc[Upgrade Branch Server]"
@@ -4266,25 +4274,20 @@ msgstr ""
 #: modules/retail/pages/retail-overview.adoc:6
 msgid ""
 "This guide provides an overview of {productname} {smr}, and its initial "
-"installation and setup."
+"installation and setup.  It should be read in conjunction with the "
+"{productname} documentation suite, available from https://documentation.suse."
+"com/suma."
 msgstr ""
 
 #. type: Plain text
 #: modules/retail/pages/retail-overview.adoc:7
 msgid ""
 "It should be read in conjunction with the {productname} documentation suite, "
-"available from https://documentation.suse.com/suma."
-msgstr ""
-
-#. type: Plain text
-#: modules/retail/pages/retail-overview.adoc:8
-msgid ""
-"It should be read in conjunction with the {productname} documentation suite, "
 "available from https://www.uyuni-project.org/uyuni-docs."
 msgstr ""
 
 #. type: Plain text
-#: modules/retail/pages/retail-overview.adoc:9
+#: modules/retail/pages/retail-overview.adoc:8
 msgid ""
 "For more information about managing your {productname} {smr} environment, or "
 "to find out where to get help, see xref:retail:retail-next.adoc[]."
