--- a/l10n-weblate/specialized-guides/specialized-guides.pot
+++ b/l10n-weblate/specialized-guides/specialized-guides.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-08-09 11:01+0000\n"
+"POT-Creation-Date: 2022-07-27 15:09+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -22,6 +22,7 @@ msgstr ""
 msgid "[.title]#{productname} {productnumber}#: Specialized Guides"
 msgstr ""
 
+#.  Guide 1
 #. type: Plain text
 #: modules/specialized-guides/nav-specialized-guides-guide.adoc:2
 msgid "xref:specialized-guides-overview.adoc[Specialized Guides]"
@@ -78,6 +79,7 @@ msgstr ""
 msgid "xref:salt/salt-yomi.adoc[Install Using Yomi]"
 msgstr ""
 
+#.  Formulas
 #. type: Plain text
 #: modules/specialized-guides/nav-specialized-guides-guide.adoc:13
 msgid "xref:salt/salt-config-modules.adoc[Configuration Modules]"
@@ -143,6 +145,7 @@ msgstr ""
 msgid "xref:salt/salt-formula-yomi.adoc[Yomi Formula]"
 msgstr ""
 
+#. *** xref:salt/salt-example-formula.adoc[Example Custom Formula]
 #. type: Plain text
 #: modules/specialized-guides/nav-specialized-guides-guide.adoc:26
 msgid "xref:salt/salt-formulas-custom.adoc[Custom Salt Formulas]"
@@ -158,6 +161,7 @@ msgstr ""
 msgid "xref:salt/salt-rate-limiting.adoc[Rate Limiting]"
 msgstr ""
 
+#.  Leaving this breadcrumb here for now, but these pages will need to be removed from the Salt Guide entirely at some point. --LKB 2020-07-17
 #. type: Plain text
 #: modules/specialized-guides/nav-specialized-guides-guide.adoc:29
 msgid "xref:salt/salt-scaling-minions.adoc[Scaling Minions]"
@@ -224,6 +228,7 @@ msgstr ""
 msgid "xref:large-deployments/retail-large-scale.adoc[Large Retail Environments]"
 msgstr ""
 
+#.  ** xref:large-deployments/monitoring.adoc[Monitoring Large Installation]
 #. type: Plain text
 #: modules/specialized-guides/nav-specialized-guides-guide.adoc:42
 msgid "xref:large-deployments/tuning.adoc[Tuning Large Installations]"
@@ -240,6 +245,7 @@ msgstr ""
 msgid "xref:qs-publiccloud/setup.adoc[Setting Up]"
 msgstr ""
 
+#.  Guide 4
 #. type: Plain text
 #: modules/specialized-guides/nav-specialized-guides-guide.adoc:45
 msgid "xref:qs-publiccloud/clients.adoc[Clients]"
@@ -1457,21 +1463,16 @@ msgstr ""
 
 #. type: Plain text
 #: modules/specialized-guides/pages/large-deployments/monitoring.adoc:3
-msgid ""
-"Prometheus and Grafana packages are included in the {productname} Client "
-"Tools for"
-msgstr ""
-
-#. type: Plain text
-#: modules/specialized-guides/pages/large-deployments/monitoring.adoc:4
 #, no-wrap
 msgid ""
+"Prometheus and Grafana packages are included in the {productname} Client "
+"Tools for\n"
 " {sle}{nbsp}12, {sle}{nbsp}15, {rhel}{nbsp} 6, {rhel}{nbsp} 7, {rhel}{nbsp} "
 "8 and openSUSE 15.x.\n"
 msgstr ""
 
 #. type: Plain text
-#: modules/specialized-guides/pages/large-deployments/monitoring.adoc:5
+#: modules/specialized-guides/pages/large-deployments/monitoring.adoc:4
 #, no-wrap
 msgid ""
 " {sle}{nbsp}12, {sle}{nbsp}15, {centos}{nbsp} 6, {centos}{nbsp} 7, "
@@ -1479,7 +1480,7 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: modules/specialized-guides/pages/large-deployments/monitoring.adoc:6
+#: modules/specialized-guides/pages/large-deployments/monitoring.adoc:5
 msgid ""
 "You need to install Prometheus and Grafana on a machine separate from the "
 "{productname} Server.  We recommend you use a managed Salt client as your "
@@ -1487,7 +1488,7 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: modules/specialized-guides/pages/large-deployments/monitoring.adoc:7
+#: modules/specialized-guides/pages/large-deployments/monitoring.adoc:6
 msgid ""
 "For more information on monitoring, see "
 "xref:administration:monitoring.adoc[]."
