--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,2 +1,3 @@
 //* xref:index-webui-branding-2019.adoc[What is SUSE Manager?]
+//* xref:release-notes-version-4.0.adoc[Doc Release Notes]
 * xref:common_gfdl1.2_i.adoc[License]
