--- a/modules/client-configuration/pages/client-upgrades.adoc
+++ b/modules/client-configuration/pages/client-upgrades.adoc
@@ -3,6 +3,8 @@
 
 Clients use the versioning system of their underlying operating system, and require regular upgrades.
 
+// SCC registered clients using {suse}:
+// ifeval::[{suma-content} == true]
 For SCC registered clients using {suse} operating systems, you can perform upgrades within the {productname} {webui}.
 For supported {sle}{nbsp}15 upgrade paths, see https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-upgrade-paths.html
 
@@ -13,6 +15,7 @@ You can also automate client upgrades using the content lifecycle manager.
 For more information, see xref:client-configuration:client-upgrades-lifecycle.adoc[].
 
 For more information about product migration such as service pack upgrades openSUSE Leap minor version upgrades, or openSUSE Leap to {sle} migrations, see xref:client-configuration:client-upgrades-product-migration.adoc[].
+// endif::[]
 
 ifeval::[{uyuni-content} == true]
 For more information about upgrading unregistered openSUSE Leap clients, see xref:client-configuration:client-upgrades-uyuni.adoc[].
