--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -7,7 +7,7 @@ The clients can be successfully bootstrapped without the GPG key being trusted.
 However, you cannot install new client tool packages or update them until the keys are trusted.
 
 Salt clients now use GPG key information entered for a software channel to manage the trusted keys.
-When a software channel with GPG key information is assigned to a client, the key ges trusted as soon the channel is refreshed or the first package gets installed from this channel.
+When a software channel with GPG key information is assigned to a client, the key is trusted as soon as the channel is refreshed or the first package gets installed from this channel.
 
 // The meaning of the following sentence is not clear
 The GPG key URL which is set of a software channel must exist.
