Fixed uncommented line.

--- a/modules/client-configuration/pages/clients-sle.adoc
+++ b/modules/client-configuration/pages/clients-sle.adoc
@@ -195,7 +195,7 @@ Use the same GPG key for both {sles}{nbsp}15 and {sles}{nbsp}12 clients.
 The correct key is called ``sle12-gpg-pubkey-39db7c82.key``.
 ====
 
-//endif::[]
+endif::[]
 
 
 
