Removed CentOS 6 from the list of supported client systems https://github.com/SUSE/spacewalk/issues/18534 https://github.com/uyuni-project/uyuni-docs/issues/1700

--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -76,7 +76,7 @@ The products you need for this procedure are:
 | SUSE Linux Enterprise Server with Expanded Support 7 x86_64
 
 | {es} 8
-| RHEL or SLES ES or CentOS 8 Base and SUSE Linux Enterprise Server with Expanded Support 8 x86_64
+| RHEL or SLES ES and SUSE Linux Enterprise Server with Expanded Support 8 x86_64
 |===
 
 [NOTE]
@@ -97,7 +97,7 @@ This procedure creates these tools channels:
 | OS Version | Base Channel                     | Tools Channel
 | {es} 6     | RHEL Expanded Support 6          | RES6-SUSE-Manager-Tools x86_64
 | {es} 7     | RHEL Expanded Support 7          | RES7-SUSE-Manager-Tools x86_64
-| {es} 8     | RHEL or SLES ES or CentOS 8 Base | RES8-Manager-Tools-Pool for x86_64 and RES8-Manager-Tools-Updates for x86_64
+| {es} 8     | RHEL or SLES ES | RES8-Manager-Tools-Pool for x86_64 and RES8-Manager-Tools-Updates for x86_64
 
 |===
 
