--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -161,7 +161,7 @@ The products you need for this procedure are:
 | OS Version | Product Name
 | {redhat} 6 | RHEL6 Base x86_64
 | {redhat} 7 | RHEL7 Base x86_64
-| {redhat} 8 | RHEL or SLES ES or CentOS 8 Base
+| {redhat} 8 | RHEL or SLES ES
 |===
 
 [NOTE]
@@ -317,7 +317,7 @@ The channels you need for this procedure are:
 | OS Version | Base Product          | Base Channel
 | {redhat} 6 | RHEL6 Base x86_64 | rhel6-pool-x86_64
 | {redhat} 7 | RHEL7 Base x86_64 | rhel7-pool-x86_64
-| {redhat} 8 | RHEL or SLES ES or CentOS 8 Base | rhel8-pool-x86_64
+| {redhat} 8 | RHEL or SLES ES | rhel8-pool-x86_64
 |===
 
 [NOTE]
