Converted the admonition about type of managed clients to plain text.

--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -9,11 +9,8 @@ This section contains information about registering traditional and Salt clients
 You are responsible for arranging access to {centos} base media repositories and {centos} installation media, as well as connecting {productname} Server to the {centos} content delivery network.
 ====
 
-[NOTE]
-====
 Traditional clients are not available on {centos}{nbsp}8.
 {centos}{nbsp}8 clients are only supported as Salt clients.
-====
 
 [NOTE]
 ====
@@ -166,13 +163,13 @@ For more information on activation keys, see xref:client-configuration:activatio
 
 
 
-ifeval::[{uyuni-content} == true]
+//ifeval::[{uyuni-content} == true]
 
-== Trust GPG Keys on Clients
+//== Trust GPG Keys on Clients
 
-include::snippets/trust_gpg.adoc[]
+//include::snippets/trust_gpg.adoc[]
 
-endif::[]
+//endif::[]
 
 
 == Manage GPG Keys
