--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -415,28 +415,39 @@ This section assumes you have setup your server using separate partitions for th
 . Install {productname}.
   Do not mount the [path]``/var/spacewalk`` and [path]``/var/lib/pgsql`` partitions.
   Wait for the installation to complete before going on to the next step.
-. Shut down the services:
-+
-----
-spacewalk-service stop
-----
+
 . Shut down the database:
 +
+
 ----
 rcpostgresql stop
 ----
-. Mount [path]``/var/spacewalk`` and [path]``/var/lib/pgsql`` partitions.
-. Restore the directories listed in <<backup-restore-product>>.
-. Start the spacewalk services:
+
+. Shut down the services:
 +
+
 ----
-spacewalk-services start
+spacewalk-service stop
 ----
+
+. Mount [path]``/var/spacewalk`` and [path]``/var/lib/pgsql`` partitions.
+
+. Restore the directories listed in <<backup-restore-product>>.
+
 . Start the database:
 +
+
 ----
 rcpostgresql start
 ----
+
+. Start the spacewalk services:
++
+
+----
+spacewalk-service start
+----
+
 
 {productname} should now operate normally without loss of your database or synchronized channels.
 
