Improvements for sudo for deb systems (#1633)
* Improvements for sudo for deb systems
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/client-configuration/pages/clients-debian.adoc
+++ b/modules/client-configuration/pages/clients-debian.adoc
@@ -174,6 +174,34 @@ For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc
 
 //endif::[]
 
+== Root Access
+
+The root user on {debian} is disabled by default for SSH access.
+
+To be able to onboard using a regular user, you need to edit the [filename]``sudoers`` file.
+
+.Procedure: Granting Root User Access
+
+. On the client, edit the [filename]``sudoers`` file:
++
+----
+sudo visudo
+----
++
+Grant [command]``sudo`` access to the user by adding this line at the end of the [filename]``sudoers`` file.
+Replace [systemitem]``<user>`` with the name of the user that is bootstrapping the client in the {webui}:
++
+----
+<user>  ALL=NOPASSWD: /usr/bin/python, /usr/bin/python2, /usr/bin/python3, /var/tmp/venv-salt-minion/bin/python
+----
+
+[NOTE]
+====
+This procedure grants root access without requiring a password, which is required for registering the client.
+When the client is successfully installed it runs with root privileges, so the access is no longer required.
+We recommend that you remove the line from the [path]``sudoers`` file after the client has been successfully installed.
+====
+
 
 
 == Register Clients
