Modify openscap abbreviation and definition in all 3 documentation pages with references to it

--- a/modules/reference/pages/audit/openscap-menu.adoc
+++ b/modules/reference/pages/audit/openscap-menu.adoc
@@ -3,7 +3,7 @@
 
 The menu:Audit[OpenSCAP] section displays the results of OpenSCAP scans that you have performed on your clients.
 
-The Security Certification and Authorization Package (SCAP) is a standardized compliance checking solution for enterprise-level Linux infrastructures.
+The Security Content Automation Protocol (SCAP) is a synthesis of interoperable specifications derived from community ideas.
 {productname} uses OpenSCAP to implement the SCAP specifications.
 
 For more information about OpenSCAP, see xref:administration:openscap.adoc[].
