--- a/modules/reference/pages/audit/openscap-all-scans.adoc
+++ b/modules/reference/pages/audit/openscap-all-scans.adoc
@@ -3,7 +3,7 @@
 
 The menu:Audit[OpenSCAP] section displays the results of OpenSCAP scans that you have performed on your clients.
 
-￼The Security Certification and Authorization Package (SCAP) is a standardized compliance checking solution for enterprise-level Linux infrastructures.
+￼The Security Content Automation Protocol (SCAP) is a synthesis of interoperable specifications derived from community ideas.
 
 [[openscap-scan-details]]
 [cols="1,1,1", options="header"]
