--- a/modules/administration/pages/openscap.adoc
+++ b/modules/administration/pages/openscap.adoc
@@ -8,7 +8,7 @@ It allows you to schedule and view compliance scans for any client.
 
 == About SCAP
 
-The Security Certification and Authorization Package (SCAP) is a synthesis of interoperable specifications derived from community ideas.
+The Security Content Automation Protocol (SCAP) is a synthesis of interoperable specifications derived from community ideas.
 It is a line of specifications maintained by the National Institute of Standards and Technology (NIST) for maintaining system security for enterprise systems.
 
 SCAP was created to provide a standardized approach to maintaining system security, and the standards that are used continually change to meet the needs of the community and enterprise businesses.
