Container proxy FQDN important note

--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -43,6 +43,10 @@ endif::[]
 
 |===
 
+[IMPORTANT]
+====
+Ensure the container proxy has a unique FQDN. This should NOT be the same as the FQDN of the container host host, and should be resolvable for any assigned clients of the proxy.
+====
 
 [[installation-proxy-containers-services]]
 == Install Container Services on the host system
