Update container proxy FQDN requirement to match the one from network requirements
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -45,8 +45,13 @@ endif::[]
 
 [IMPORTANT]
 ====
-Ensure the container proxy has a unique FQDN. This should NOT be the same as the FQDN of the container host host, and should be resolvable for any assigned clients of the proxy.
+The container proxy must have a unique Fully Qualified Domain Name (FQDN).
+This should not be the same as the FQDN of the container host.
+To ensure that the {productname} domain name can be resolved by its clients, both container proxy and client machines must be connected to a working DNS server.
+You also need to ensure that reverse lookups are correctly configured.
 ====
+
+
 
 [[installation-proxy-containers-services]]
 == Install Container Services on the host system
