also mention products based on SLES
per feedback

--- a/modules/administration/pages/disconnected-setup.adoc
+++ b/modules/administration/pages/disconnected-setup.adoc
@@ -129,12 +129,12 @@ If these channels are not enabled, {productname} may fail to detect that product
 
 Run the following command to enable these mandatory channels:
 
-SLES 12::
+SLES 12 and products based on it such as SLES for SAP or SLE HPC::
 RMT: [command]``rmt-cli products enable sle-manager-tools/12/x86_64``
 +
 SMT: [command]``smt repos -p sle-manager-tools,12,x86_64``
 
-SLES 15::
+SLES 15 and products based on it such as SLES for SAP or SLE HPC::c
 RMT: [command]``rmt-cli products enable sle-manager-tools/15/x86_64``
 +
 SMT: [command]``smt repos -p sle-manager-tools,15,x86_64``
