relax region requirement for payg connect feature, add ds_store to gitignore

--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -9,9 +9,10 @@ In the three major public cloud providers (AWS, GCP and Azure), SUSE:
 This document describes how to connect existing {payg} instance to {productname} server, and gives basic information about credentials collection from the instance.
 The goal of the connection is to extract authentication data so {productname} server is able to connect to cloud RMT host.
 
-Before using {payg} feature make sure that: 
+Before using the {payg} feature ensure: 
 
-* {productname} server is deployed in the same region as the {payg} instance
+* the {payg} instance is launched from the correct SUSE product image (e.g. SLES, SLES for SAP, SLE HPC) to allow access to the desired repositories
+* {productname} server has connectivity to the {payg} instance (ideally in the same region) either directly or via a bastion
 * valid {scc} credentials are entered in menu:Admin[Setup Wizard > Organization Credentials], even they provide only limited access to products
 
 
@@ -20,7 +21,7 @@ Before using {payg} feature make sure that:
 [[proc-connecting-new-payg]]
 .Procedure: Connecting new {payg} instance
 [role=procedure]
-. In the {productname} {webui}, navigate  to menu:Admin[Setup Wizard > {payg}], and click btn:[Add {payg}].
+. In the {productname} {webui}, navigate to menu:Admin[Setup Wizard > {payg}], and click btn:[Add {payg}].
 . Start with the page section [guimenu]``{payg} connection Description``.
 . In the [guimenu]``Description`` field, add the description.
 . Move to the page section [guimenu]``Instance SSH connection data``.
