--- a/modules/administration/pages/disconnected-setup.adoc
+++ b/modules/administration/pages/disconnected-setup.adoc
@@ -134,7 +134,7 @@ RMT: [command]``rmt-cli products enable sle-manager-tools/12/x86_64``
 +
 SMT: [command]``smt repos -p sle-manager-tools,12,x86_64``
 
-SLES 15 and products based on it such as SLES for SAP or SLE HPC::c
+SLES 15 and products based on it such as SLES for SAP or SLE HPC::
 RMT: [command]``rmt-cli products enable sle-manager-tools/15/x86_64``
 +
 SMT: [command]``smt repos -p sle-manager-tools,15,x86_64``
@@ -144,8 +144,8 @@ Then mirror the channels, and export.
 Other distributions, or architectures, can be enabled.
 For more information about enabling product channels or repositories to be mirrored, see the documentation:
 
-* RMT: https://documentation.suse.com/sles/15-SP4/html/SLES-all/cha-rmt-mirroring.html#sec-rmt-mirroring-enable-disable
-* SMT: https://documentation.suse.com/sles/12-SP5/single-html/SLES-smt/index.html#smt-mirroring-manage-domirror
+RMT:: https://documentation.suse.com/sles/15-SP4/html/SLES-all/cha-rmt-mirroring.html#sec-rmt-mirroring-enable-disable
+SMT:: https://documentation.suse.com/sles/12-SP5/single-html/SLES-smt/index.html#smt-mirroring-manage-domirror
 
 
 
