mandatory channels in the Disconnected Setup chapter (#1736)
* mandatory channels in the Disconnected Setup chapter
https://bugzilla.suse.com/show_bug.cgi?id=1202464
https://github.com/SUSE/spacewalk/issues/18671
* also mention products based on SLES

--- a/modules/administration/pages/disconnected-setup.adoc
+++ b/modules/administration/pages/disconnected-setup.adoc
@@ -122,6 +122,33 @@ You can change SMT user settings in [path]``/etc/smt.conf``.
 
 
 
+== Mandatory Channels
+
+The corresponding {productname} Client Tools Channels are required, for {productname} to be able to synchronize a given channel.
+If these channels are not enabled, {productname} may fail to detect that product.
+
+Run the following command to enable these mandatory channels:
+
+SLES 12 and products based on it such as SLES for SAP or SLE HPC::
+RMT: [command]``rmt-cli products enable sle-manager-tools/12/x86_64``
++
+SMT: [command]``smt repos -p sle-manager-tools,12,x86_64``
+
+SLES 15 and products based on it such as SLES for SAP or SLE HPC::
+RMT: [command]``rmt-cli products enable sle-manager-tools/15/x86_64``
++
+SMT: [command]``smt repos -p sle-manager-tools,15,x86_64``
+
+Then mirror the channels, and export.
+
+Other distributions, or architectures, can be enabled.
+For more information about enabling product channels or repositories to be mirrored, see the documentation:
+
+RMT:: https://documentation.suse.com/sles/15-SP4/html/SLES-all/cha-rmt-mirroring.html#sec-rmt-mirroring-enable-disable
+SMT:: https://documentation.suse.com/sles/12-SP5/single-html/SLES-smt/index.html#smt-mirroring-manage-domirror
+
+
+
 == Synchronize a Disconnected Server
 
 When you have removable media loaded with your {scc} data, you can use it to synchronize your disconnected server.
