--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -43,6 +43,15 @@ endif::[]
 
 |===
 
+[IMPORTANT]
+====
+The container proxy must have a unique Fully Qualified Domain Name (FQDN).
+This should not be the same as the FQDN of the container host.
+To ensure that the {productname} domain name can be resolved by its clients, both container proxy and client machines must be connected to a working DNS server.
+You also need to ensure that reverse lookups are correctly configured.
+====
+
+
 
 [[installation-proxy-containers-services]]
 == Install Container Services on the host system
