--- a/modules/installation-and-upgrade/pages/proxy-container-setup.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-setup.adoc
@@ -8,6 +8,7 @@ Once container host for {productname} Proxy containers is prepared, setup of con
 3. Start [literal]``systemd`` proxy services
 
 
+
 [[proxy-setup-containers-generate-config]]
 == Create and generate {productname} Proxy configuration
 
@@ -31,6 +32,8 @@ There are two ways how to generate {productname} configuration: use web interfac
 . In the [guimenu]``SSL certificate`` choose if new server certificate should be generated for {productname} Proxy or existing should be used.
 +
 Depending on the choice then provide either path to signing CA certificate to generate new certificate or path to server certificate and its key to be used as proxy certificate.
++
+The CA certificates on the server are stored in the [path]``/root/ssl-build`` directory.
 
 . Click btn:[Generate] to register new proxy FQDN in {productname} Server and generate configuration archive with details for container host.
 
