--- a/modules/installation-and-upgrade/pages/proxy-container-setup.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-setup.adoc
@@ -36,7 +36,7 @@ Depending on the choice then provide either path to signing CA certificate to ge
 +
 The CA certificates generated on the server are stored in the [path]``/root/ssl-build`` directory.
 +
-For more information about existing or custom certificates and the concept of corporate and intermediate certificates, see  xref:administration/ssl-certs-imported.adoc[].
+For more information about existing or custom certificates and the concept of corporate and intermediate certificates, see  xref:administration:ssl-certs-imported.adoc[].
 
 . Click btn:[Generate] to register new proxy FQDN in {productname} Server and generate configuration archive with details for container host.
 
