--- a/modules/administration/pages/repo-metadata.adoc
+++ b/modules/administration/pages/repo-metadata.adoc
@@ -85,7 +85,8 @@ This means that all clients connected to the server need to trust the new  GPG k
 
 
 .Procedure: Importing GPG keys on Clients
-. The deployment for GPG keys to the clients is done via salt states. Just apply the highstate via the {productname} {webui}.
+. Deploying GPG keys to the clients works with salt states.
+Apply the highstate with the {productname} {webui}.
 
 
 For more information about troubleshooting GPG keys, see xref:administration:tshoot-sync.adoc[].
