--- a/modules/administration/pages/auth-methods-sso-example.adoc
+++ b/modules/administration/pages/auth-methods-sso-example.adoc
@@ -1,8 +1,7 @@
 [[auth-methods-sso-example]]
 = Example SSO Implementation
 
-In this example, SSO is implemented by exposing three endpoints with {productname}, and using Keycloak 9.0.2
-as the identity service provider (IdP).
+In this example, SSO is implemented by exposing three endpoints with {productname}, and using Keycloak 9.0.2 or later as the identity service provider (IdP).
 
 Start by setting up the {productname} Server, and the Keycloak IdP.
 Then you can add the endpoints as clients, and create users.
