--- a/modules/administration/pages/auth-methods-sso-example.adoc
+++ b/modules/administration/pages/auth-methods-sso-example.adoc
@@ -60,8 +60,8 @@ docker run -td --name=idp -p 8080:8080 -e KEYCLOAK_USER=<user> -e KEYCLOAK_PASSW
 * In the ``Name`` field, enter a name for the realm.
     For example, ``SUMA``.
 * Toggle the ``Enabled`` switch to ``On``.
-* In the ``Endpoints`` field, click on the link ``SAML 2.0 Identity Provider Metadata``.
-    This will lead you to ``<IdP_URL>/auth/realms/<Realm_Name>/protocol/saml/descriptor``, where you will see the endpoints and certificate to copy into the {productname} configuration file.
+* In the ``Endpoints`` field, click the ``SAML 2.0 Identity Provider Metadata`` link.
+  This will lead you to ``<IdP_URL>/auth/realms/<Realm_Name>/protocol/saml/descriptor``, where you will see the endpoints and certificate to copy into the {productname} configuration file.
 
 
 
