command to remove python on suma 4.1 https://github.com/SUSE/spacewalk/issues/18864 https://bugzilla.suse.com/show_bug.cgi?id=1203026

--- a/modules/installation-and-upgrade/pages/server-y.adoc
+++ b/modules/installation-and-upgrade/pages/server-y.adoc
@@ -23,7 +23,13 @@ This does not apply if you are logged in from a remote machine (unless you are r
 == Preparing Upgrade to 4.3
 
 Before you start the upgrade process you must deactive the Python 2 module ([package]``sle-module-python2``) on the old 4.1.x or 4.2.x {productname} Server.
-On the command line, as root, run:
+In case of 4.1.x, on the command line, as root, run:
+
+----
+SUSEConnect -d -p sle-module-python2/15.2/x86_64
+----
+
+In case of 4.2.x, on the command line, as root, run:
 
 ----
 SUSEConnect -d -p sle-module-python2/15.3/x86_64
