Adjust the containerized proxy to match the new installation process

--- a/modules/installation-and-upgrade/pages/proxy-container-setup.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-setup.adoc
@@ -56,7 +56,7 @@ spacecmd proxy_container_config_generate_cert -- <proxy_fqdn> <oarent_fqdn> <squ
 
 . Answer questions presented by script, namely {productname} credentials and CA password.
 +
-This will generate file `config.zip` with configuration for the {productname} Proxy containers.
+This will generate file `config.tar.gz` with configuration for the {productname} Proxy containers.
 +
 For more information about [literal]`spacecmd` container proxy generation, see xref:reference:spacecmd/proxy_container.adoc[].
 
