also added SLE Micro 5.3 as Tech Prev

--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -3,9 +3,11 @@
 
 This section contains information about registering clients running these {nbsp}{micro} operating systems:
 
-* {micro}{nbsp}5.1 and 5.2 {x86_64}
-* {micro}{nbsp}5.1 and 5.2 {arm64}
-* {micro}{nbsp}5.1 and 5.2 {zsystems} (s390x)
+* {micro}{nbsp}5.1, 5.2, and 5.3 {x86_64}
+* {micro}{nbsp}5.1, 5.2, and 5.3 {arm64}
+* {micro}{nbsp}5.1, 5.2, and 5.3 {zsystems} (s390x)
+
+{micro}{nbsp}5.3 is scheduled to be released end of October 2022.
 
 [WARNING]
 ====
@@ -72,8 +74,18 @@ The products you need for this procedure are:
 | {micro} 5.2 {s390x}
 | SUSE Linux Enterprise Micro 5.2 s390x
 
+| {micro} 5.3 {x86_64}
+| SUSE Linux Enterprise Micro 5.3 x86_64
+
+| {micro} 5.3 {arm64}
+| SUSE Linux Enterprise Micro 5.3 aarch64
+
+| {micro} 5.3 {s390x}
+| SUSE Linux Enterprise Micro 5.3 s390x
+
 |===
 
+{micro}{nbsp}5.3 is scheduled to be released end of October 2022.
 
 include::snippets/addchannels_vendor_webui.adoc[]
 
@@ -95,6 +107,10 @@ The channels you need for this procedure are:
 | suse-microos-5.1-pool-x86_64
 | suse-microos-5.1-updates-x86_64
 
+| {micro} 5.1 {arm64}
+| suse-microos-5.1-pool-arm64
+| suse-microos-5.1-updates-arm64
+
 | {micro} 5.1 {zsystems} ({s390x})
 | suse-microos-5.1-pool-s390x
 | suse-microos-5.1-updates-s390x
@@ -111,8 +127,21 @@ The channels you need for this procedure are:
 | suse-microos-5.2-pool-s390x
 | suse-microos-5.2-updates-s390x
 
+| {micro} 5.3 {x86_64}
+| sle-micro-5.3-pool-x86_64
+| sle-micro-5.3-updates-x86_64
+
+| {micro} 5.2 {arm64}
+| sle-micro-5.3-pool-arm64
+| sle-micro-5.3-updates-arm64
+
+| {micro} 5.2 {zsystems} ({s390x})
+| sle-micro-5.3-pool-s390x
+| sle-micro-5.3-updates-s390x
+
 |===
 
+{micro}{nbsp}5.3 is scheduled to be released end of October 2022.
 
 include::snippets/addchannels_vendor_cli.adoc[]
 
