Added secure mail communication settings in Administration Guide support for smtp port, auth and ssl/tls config in rhn.cfg https://github.com/SUSE/spacewalk/issues/18187

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -65,6 +65,7 @@ endif::[]
 *** xref:tshoot-iss.adoc[Troubleshooting Inter-Server Synchronization]
 *** xref:tshoot-localcert.adoc[Troubleshooting Local Certificates]
 *** xref:tshoot-logintimeout.adoc[Troubleshooting Login Timeout]
+*** xref:tshoot-mail.adoc[Troubleshooting Mail Configuration]
 *** xref:tshoot-notifications.adoc[Troubleshooting Notifications]
 *** xref:tshoot-osadjabberd.adoc[Troubleshooting OSAD and jabberd]
 *** xref:tshoot-packages.adoc[Troubleshooting Packages]
