Documented Ubuntu 22.04 LTS again (#1670)
* Documented Ubuntu 22.04 LTS again

--- a/modules/client-configuration/pages/supported-features-ubuntu.adoc
+++ b/modules/client-configuration/pages/supported-features-ubuntu.adoc
@@ -25,12 +25,9 @@ The icons in this table indicate:
 * {trad} the feature is supported only on traditional clients
 * {salt} the feature is supported only on Salt clients.
 
-
-// Remove the ifs and the uyuni part when we add the Ubuntu 20.04 there (Leap 15.2 server is require first)
-
 ifeval::[{suma-content} == true]
 
-[cols="1,1,1,1", options="header"]
+[cols="1,1,1,1,1", options="header"]
 .Supported Features on {ubuntu} Operating Systems
 |===
 
@@ -38,8 +35,10 @@ ifeval::[{suma-content} == true]
 | {ubuntu}{nbsp}16.04
 | {ubuntu}{nbsp}18.04
 | {ubuntu}{nbsp}20.04
+| {ubuntu}{nbsp}22.04
 
 | Client
+| {check}
 | {check}
 | {check}
 | {check}
@@ -48,8 +47,10 @@ ifeval::[{suma-content} == true]
 | {ubuntu} Community
 | {ubuntu} Community
 | {ubuntu} Community
+| {ubuntu} Community
 
 | Registration
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -58,8 +59,10 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Apply patches
+| {check}
 | {check}
 | {check}
 | {check}
@@ -68,8 +71,10 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | System package states
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -78,8 +83,10 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Group custom states
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -88,8 +95,10 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | System set manager (SSM)
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -98,8 +107,10 @@ ifeval::[{suma-content} == true]
 | N/A
 | N/A
 | N/A
+| N/A
 
 | Basic Virtual Guest Management {star}
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -108,8 +119,10 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Virtual Guest Installation (Kickstart), as Host OS
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -118,8 +131,10 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | System deployment (PXE/Kickstart)
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -128,8 +143,10 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Contact methods
+| {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
@@ -138,8 +155,10 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Action chains
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -148,8 +167,10 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Duplicate package reporting
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -158,8 +179,10 @@ ifeval::[{suma-content} == true]
 | {question}
 | {question}
 | {question}
+| {question}
 
 | SCAP auditing
+| {question}
 | {question}
 | {question}
 | {question}
@@ -168,8 +191,10 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Package locking
+| {check}
 | {check}
 | {check}
 | {check}
@@ -178,8 +203,10 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 | {check}
+| {check}
 
 | System locking
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -188,8 +215,10 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Configuration file management
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -198,8 +227,10 @@ ifeval::[{suma-content} == true]
 | {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
+| {salt}: Profiles supported, Sync not supported
 
 | Power management
+| {check}
 | {check}
 | {check}
 | {check}
@@ -208,8 +239,10 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {salt}
 | {salt}
+| {salt}
 
 | Docker buildhost
+| {question}
 | {question}
 | {question}
 | {question}
@@ -218,8 +251,10 @@ ifeval::[{suma-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Kiwi buildhost
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -228,8 +263,10 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Recurring Actions
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -238,8 +275,10 @@ ifeval::[{suma-content} == true]
 | N/A
 | N/A
 | N/A
+| N/A
 
 | Yomi
+| N/A
 | N/A
 | N/A
 | N/A
@@ -251,7 +290,7 @@ endif::[]
 
 ifeval::[{uyuni-content} == true]
 
-[cols="1,1,1,1", options="header"]
+[cols="1,1,1,1,1", options="header"]
 .Supported Features on {ubuntu} Operating Systems
 |===
 
@@ -259,8 +298,10 @@ ifeval::[{uyuni-content} == true]
 | {ubuntu}{nbsp}16.04
 | {ubuntu}{nbsp}18.04
 | {ubuntu}{nbsp}20.04
+| {ubuntu}{nbsp}22.04
 
 | Client
+| {check}
 | {check}
 | {check}
 | {check}
@@ -269,8 +310,10 @@ ifeval::[{uyuni-content} == true]
 | Canonical
 | Canonical
 | Canonical
+| Canonical
 
 | Registration
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -279,8 +322,10 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Apply patches
+| {check}
 | {check}
 | {check}
 | {check}
@@ -289,8 +334,10 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | System package states
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -299,8 +346,10 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Group custom states
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -309,8 +358,10 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | System set manager (SSM)
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -319,8 +370,10 @@ ifeval::[{uyuni-content} == true]
 | N/A
 | N/A
 | N/A
+| N/A
 
 | Basic Virtual Guest Management {star}
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -329,8 +382,10 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Virtual Guest Installation (Kickstart), as Host OS
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -339,8 +394,10 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | System deployment (PXE/Kickstart)
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -349,8 +406,10 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Contact methods
+| {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
@@ -359,8 +418,10 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Action chains
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -369,8 +430,10 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Duplicate package reporting
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -379,8 +442,10 @@ ifeval::[{uyuni-content} == true]
 | {question}
 | {question}
 | {question}
+| {question}
 
 | SCAP auditing
+| {question}
 | {question}
 | {question}
 | {question}
@@ -389,8 +454,10 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Package locking
+| {check}
 | {check}
 | {check}
 | {check}
@@ -399,8 +466,10 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | System snapshot
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -409,8 +478,10 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Package profiles
+| {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
@@ -419,13 +490,16 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {check}
 | {check}
+| {check}
 
 | Monitoring
 | {cross}
 | {salt}
 | {salt}
+| {salt}
 
 | Docker buildhost
+| {question}
 | {question}
 | {question}
 | {question}
@@ -434,13 +508,16 @@ ifeval::[{uyuni-content} == true]
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Kiwi buildhost
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Build Kiwi image with OS
+| {cross}
 | {cross}
 | {cross}
 | {cross}
