Ccg autoinst secureboot #18937 keichwa (#1760)
* add note about secure boot and shim.efi
https://github.com/SUSE/spacewalk/issues/18937
https://github.com/uyuni-project/uyuni/issues/5851

--- a/modules/client-configuration/pages/autoinst-pxeboot.adoc
+++ b/modules/client-configuration/pages/autoinst-pxeboot.adoc
@@ -82,6 +82,12 @@ Alternatively, if your DHCP server is registered at {productname}, you can confi
 . Click btn:[Save Formula] to save your configuration.
 . Apply the highstate.
 
+
+[NOTE]
+====
+If you use Secure Boot, type [path]``grub/shim.efi instead of [path]``grub/grub.efi`` in the [guimenu]``Filename EFI`` field.
+====
+
 This sets up a global PXE server for all the hosts, you can also have per-host settings.
 For more information about the DHCPd formula, see xref:specialized-guides:salt/salt-formula-dhcpd.adoc[DHCPd Formula].
 
