Snippet replacing small chunk of text.

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -297,22 +297,9 @@ After that period, the product is considered unsupported.
 Any support may only be available on the best-effort basis.
 
 
-//[[eol.clients]]
-[cols="1,1,1,1", options="header"]
-.Clients approaching end-of-life and end of support
-|===
+//EOL clients
+include::snippets/eol-clients.adoc[]
 
-| Operating System
-| Architecture
-| End-of-life date
-| End of support
-
-| {debian} 9
-| {x86_64}, {aarch64}, armv7l, i586
-| 2022-06-30
-| 2022-09-30
-
-|===
 
 == Supported Tools Packages
 
