--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -280,6 +280,10 @@ ifeval::[{uyuni-content} == true]
 |===
 endif::[]
 
+//EOL clients
+include::../../client-configuration/pages/snippets/eol-clients.adoc[]
+
+
 [IMPORTANT]
 ====
 Salt SSH is using [path]``/var/tmp`` to deploy Salt Bundle to and execute Salt commands on the client with the bundled Python.
